создал блок с user на главной странице

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,8 +7,10 @@
 }
 
 .header__container {
+  width: 1076px;
   display: flex;
   justify-content: space-between;
+  margin: 0 auto;
 }
 
 .header__logo {
@@ -27,8 +29,8 @@
 }
 
 .header__logoImg {
-  width: 24px;
-  height: 24px;
+  width: 34px;
+  height: 34px;
 }
 
 .header__logoPhoto {
