--- a/src/components/Sidebar/SidebarLeft/SidebarLeft.module.css
+++ b/src/components/Sidebar/SidebarLeft/SidebarLeft.module.css
@@ -1,6 +1,25 @@
 .sidebarLeft {
   width: 164px;
-  background: transparent;
-  outline: 1px solid white;
   border-radius: 12px;
+}
+
+.list {
+  list-style-type: none;
+  font-size: 13px;
+  padding: 0;
+  margin: 0;
+}
+
+.listItem {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  padding: 0 6px;
+}
+
+.listItem:hover {
+  background: #dadde2;
 }
