--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,7 +20,7 @@
   text-decoration: none;
   letter-spacing: 1.2px;
   font-weight: bold;
-  padding: 10px;
+  padding: 0 10px;
   transition: .4s all;
 }
 
