--- a/src/components/Sidebar/SidebarLeft/SidebarLeft.module.css
+++ b/src/components/Sidebar/SidebarLeft/SidebarLeft.module.css
@@ -11,6 +11,7 @@
 }
 
 .listItem {
+  text-decoration: none;
   width: 100%;
   height: 30px;
   display: flex;
@@ -18,6 +19,11 @@
   gap: 10px;
   cursor: pointer;
   padding: 0 6px;
+  color: black;
+}
+
+.listItem .active {
+  color: red;
 }
 
 .listItem:hover {
