--- a/src/components/Sidebar/SidebarRight/SidebarRightBox/FriendsFeed/FriendsFeed.module.css
+++ b/src/components/Sidebar/SidebarRight/SidebarRightBox/FriendsFeed/FriendsFeed.module.css
@@ -28,6 +28,7 @@
 }
 
 .figure {
+	position: relative;
 	margin: 0;
 }
 
@@ -47,4 +48,19 @@
 	width: min-content;
 	font-size: 12px;
 	margin: 0 auto;
+}
+
+.phoneImg {
+	position: absolute;
+	right: 0;
+	bottom: 24px;
+	width: 8px;
+	height: 12px;
+	background: white;
+	padding: 1px 2px;
+}
+
+.phoneIcon {
+	width: 100%;
+	height: 100%;
 }
