--- a/src/components/MyPage/Post/Post.module.css
+++ b/src/components/MyPage/Post/Post.module.css
@@ -9,7 +9,7 @@
 .post__header {
   display: flex;
   gap: 20px;
-  margin: 0 0 8px;
+  margin: 0 0 10px;
 }
 
 .post__avatar {
@@ -60,12 +60,19 @@
   background: #a3a8ad;
 }
 
-.body {
+.post__body {
   margin: 0 0 12px;
+}
+
+.post__title {
+	font-size: 16px;
+	margin: 0 0 8px;
 }
 
 .post__text {
   font-size: 13px;
+	text-indent: 10px;
+	margin: 0 0 15px;
 }
 
 .post__img {
