--- a/src/components/FriendsPage/FriendsPage.module.css
+++ b/src/components/FriendsPage/FriendsPage.module.css
@@ -1,13 +1,25 @@
+.main {
+	width: 100%;
+}
+
+.row {
+	display: flex;
+	gap: 20px;
+}
+
 .list {
+	width: 100%;
 	list-style-type: none;
-	padding: 0;
+	border-radius: 12px;
+	background: white;
+	padding: 20px;
 	margin: 0;
 }
 
 .item {
 	display: flex;
 	gap: 20px;
-	margin: 0 0 20px;
+	margin: 0 0 15px;
 }
 
 .photo {
